Correction d'un bug où les pages sans scrollbar se voyaient décalées par rapport aux pages plus longues

--- a/mystyles.css
+++ b/mystyles.css
@@ -4,6 +4,7 @@
 }
 
 html{
+    scrollbar-gutter: stable;
     --color1: #1e435d;
     --color2: #153043;
     --color3: #456882;
